--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -7,6 +7,10 @@
 
 <ion-content padding>
 
+  <ion-list no-lines>
+    <ion-item *ngFor="let m of messages | async">{{m.text}}</ion-item>
+  </ion-list>
+
 </ion-content>
 
 
