--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -7,9 +7,7 @@
 
 <ion-content padding>
 
-  <ion-list no-lines>
-    <ion-item *ngFor="let m of viewMessages | async">{{m.text}}</ion-item>
-  </ion-list>
+  <message-box *ngFor="let m of viewMessages | async" [message]="m" [isFromSender]="(m.userId === sender.$key)"></message-box>
 
 </ion-content>
 
@@ -18,10 +16,7 @@
 
   <ion-toolbar>
     <ion-item no-lines>
-      <ion-input type="text"
-        (keyup.enter)="sendMessage(newMessage); newMessage=''"
-        placeholder="Message..."
-        [(ngModel)]="newMessage">
+      <ion-input type="text" (keyup.enter)="sendMessage(newMessage); newMessage=''" placeholder="Message..." [(ngModel)]="newMessage">
       </ion-input>
 
       <button ion-button item-end (click)="sendMessage(newMessage); newMessage=''">
