--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,12 +13,14 @@
       </ion-segment-button>
     </ion-segment>
   </ion-toolbar>
+
+  <ion-toolbar>
+    <ion-searchbar (ionInput)="filterItems($event)"></ion-searchbar>
+  </ion-toolbar>
+
 </ion-header>
 
-
-
 <ion-content padding>
-
 
   <div [ngSwitch]="view">
 
