--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -1,18 +1,40 @@
-<!--
-  Generated template for the UserProfilePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>user-profile</ion-title>
-  </ion-navbar>
+  <custom-logged-header [title]="'User Profile'"></custom-logged-header>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <user-info [user]="currentUser"></user-info>
+
+  <button ion-button block (click)="canEdit = !canEdit">Edit</button>
+
+  <form (ngSubmit)="onSubmit($event)" *ngIf="canEdit" #profileForm="ngForm">
+
+    <ion-item>
+      <ion-icon name="person" item-start></ion-icon>
+      <ion-input type="text" placeholder="Name" name="name" [(ngModel)]="currentUser.name" required minlenght="3">
+      </ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-icon name="at" item-start></ion-icon>
+      <ion-input type="text" placeholder="Username" name="username" [(ngModel)]="currentUser.username" required minlenght="3">
+      </ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-icon name="image" item-start></ion-icon>
+      <input type="file" accept="image/*" (change)="onPhoto($event)">
+    </ion-item>
+
+    <progress-bar *ngIf="uploadProgress" [progress]="uploadProgress"></progress-bar>
+
+    <br>
+    <button ion-button block type="submit" [disabled]="profileForm.form.invalid">Save</button>
+
+  </form>
 
 </ion-content>
