--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -27,7 +27,7 @@
     <ion-list *ngSwitchCase="'chats'" no-lines>
       <button ion-item *ngFor="let chat of chats | async" (click)="onChatOpen(chat)">
         <ion-avatar item-start>
-          <img [src]="chat.photo || 'assets/images/no-photo.jpg'">
+          <img [src]="chat.photo || 'assets/imgs/no-photo.jpg'">
         </ion-avatar>
         <h2>{{ chat.title }}</h2>
         <p *ngIf="chat.lastMessage; else customMessage">{{ chat.timestamp | date:'dd/MM/y H:mm' }} - {{ chat.lastMessage }}</p>
@@ -39,6 +39,9 @@
 
     <ion-list *ngSwitchCase="'users'" no-lines>
       <button ion-item *ngFor="let user of users | async" (click)="onChatCreate(user)">
+        <ion-avatar item-start>
+          <img [src]="user.photo || 'assets/imgs/no-photo.jpg'">
+        </ion-avatar>
         {{user.name}}
       </button>
     </ion-list>
